add show function

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<h1>つぶやき詳細画面</h1>
+<p>内容: <%= @post.content %></p>
+<p>時間: <%= l @post.updated_at %></p>
+<br>
+<%= link_to "つぶやき一覧画面にもどる", posts_path %>
