--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,8 +10,9 @@
 <% @posts.each do |post| %>
   <tr>
     <td><%= post.content %></td>
+    <td><%= link_to "詳細", post_path(post.id) %></td>
   </tr>
 <% end %>
 </table>
-
+<br>
 <%= link_to "新しくつぶやく", new_post_path %>
