add edit, update function

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="post_title">
-    <%= form.label :content %>
+    <%= form.label :content "内容"%>
     <%= form.text_area :content %>
   </div>
   <%= form.submit %>
 <% end %>
-
+<br>
 <%= link_to "つぶやき一覧画面にもどる", posts_path %>
