--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,7 @@
   <tr>
     <td><%= post.content %></td>
     <td><%= link_to "詳細", post_path(post.id) %></td>
+    <td><%= link_to "編集", edit_post_path(post.id) %></td>
   </tr>
 <% end %>
 </table>
