--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,32 @@
  *= require_tree .
  *= require_self
  */
+
+header {
+  color: #fff;
+  background-color: #abb946;
+}
+
+footer {
+  color: #fff;
+  background-color: #abb946;
+}
+
+table {
+  background: #fafed9;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+td {
+  padding: 0.2rem;
+}
+
+label {
+  display: block;
+  text-align: center;
+}
+
+body {
+  text-align: center;
+}
